2010-09-28  Benjamin Poulain  <benjamin.poulain@nokia.com>

        Reviewed by Andreas Kling.

        [Qt] Remove support for Qt 4.5
        https://bugs.webkit.org/show_bug.cgi?id=46718

        Remove the code for versions of Qt prior to 4.6.

        * UIProcess/API/qt/qgraphicswkview.cpp:
        (QGraphicsWKView::event):
        * UIProcess/API/qt/qwkpage.cpp:
        * UIProcess/API/qt/qwkpage_p.h:

2010-09-28  Andras Becsi  <abecsi@webkit.org>

        Reviewed by Csaba Osztrogonác.

        [Qt] Fix generation of WebPageMessages.h and WebPageMessageReceiver.cpp
        to avoid rebuilding them every time.

        * DerivedSources.pro: add target to extra compilers.

2010-09-27  Brady Eidson  <beidson@apple.com>

        Reviewed by Sam Weinig.

        https://bugs.webkit.org/show_bug.cgi?id=46688 - Add an API to get the WKBackForwardItem at an arbitrary index.

        * UIProcess/API/C/WKBackForwardList.cpp:
        (WKBackForwardListGetItemAtIndex):
        * UIProcess/API/C/WKBackForwardList.h:

2010-09-27  Anders Carlsson  <andersca@apple.com>

        Turns out people other than me might want to build this thing.

        * WebKit2.xcodeproj/project.pbxproj:

2010-09-27  Darin Adler  <darin@apple.com>

        * Scripts/webkit2: Added property svn:ignore.

2010-09-27  Anders Carlsson  <andersca@apple.com>

        Reviewed by Sam Weinig.

        * Platform/CoreIPC/Connection.h:
        (CoreIPC::Connection::sendSync):
        Add new sendSync overload that takes a message struct.

        * PluginProcess/WebProcessConnection.cpp:
        (WebKit::WebProcessConnection::didReceiveSyncMessage):
        Call didReceiveSyncWebProcessConnectionMessage.
        
        * WebProcess/Plugins/PluginProcessConnection.cpp:
        (WebKit::PluginProcessConnection::addPluginProxy):
        Add the plug-in proxy to the map.

        (WebKit::PluginProcessConnection::removePluginProxy):