@@ -1,3 +1,14 @@
+2010-09-28  Andras Becsi  <abecsi@webkit.org>
+
+        Reviewed by Kenneth Rohde Christiansen.
+
+        [Qt] ProcessLauncherHelper should not leave stray socket files in /tmp.
+        https://bugs.webkit.org/show_bug.cgi?id=46722
+
+        * UIProcess/Launcher/qt/ProcessLauncherQt.cpp:
+        (WebKit::ProcessLauncherHelper::~ProcessLauncherHelper): close the socket.
+        (WebKit::ProcessLauncherHelper::ProcessLauncherHelper): delete the helper on exit.
+
 2010-09-28  Benjamin Poulain  <benjamin.poulain@nokia.com>
 
         Reviewed by Andreas Kling.
